<resources>
    <string name="app_name">KOD Partner</string>
    <string name="kc_enterprises">KC ENTERPRISES</string>
    <string name="surelogout">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="kod_services">KOD Services</string>
    <string name="str_OK">OK</string>
    <string name="msg_no_network">The internet connection appears to be offline</string>
    <string name="nonetworkdiscription">No network please connect with internet</string>
    <string name="networkerror">Network Error</string>
    <string name="LoginData_key">LoginData</string>
    <string name="default_notification_channel_id">default</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="booking">My Booking</string>
    <string name="profile">Profile</string>
    <string name="select_revisit_date_show_calendra_amp_time_slot"><![CDATA[Select Revisit Date - Show Calendra & Time Slot]]></string>
    <string name="submit">SUBMIT</string>
    <string name="add_more_fault_button">Add More Fault Button</string>
    <string name="split_ac_repair">Split AC Repair</string>
    <string name="window_ac_repair">Window AC Repair</string>
    <string name="header_title">title</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
functionality.</string>
    <string name="gps_network_not_enabled">gps network not enabled</string>
    <string name="open_location_settings">open location settings</string>
    <string name="settings">Settings</string>
    <string name="set_location">Set Location</string>
    <string name="spinner_title">Select Service (AC)</string>
    <string name="save_changes">Save Changes</string>
    <string name="empty_adhar">Please enter adhar number</string>
    <string name="empty_pan_no">Please enter pan number</string>
    <string name="empty_address">Please enter address</string>
    <string name="empty_alterno">Please enter alternate number</string>
    <string name="empty_pfathername">Please enter father name</string>
    <string name="empty_p_name">Please enter name</string>
    <string name="take_a_picture_from_camera">take a picture from camera</string>
    <string name="choose_from_gallery">choose from gallery</string>
    <string name="no_thanks">no thanks</string>
    <string name="you_want_to_crop_this_image">you want to crop this image</string>
    <string name="use_orignal">use orignal</string>
    <string name="crop">crop</string>
    <string name="Online">Online</string>
    <string name="COD">COD</string>
    <string name="selected_item">Selected Item:</string>
    <string-array name="paymentmode">
        <item>Select</item>
        <item>Cash</item>
        <item>Transfer</item>
        <item>Paytm</item>
        <item>UPI</item>
        <item>Other</item>
    </string-array>
</resources>
