<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        app:cardElevation="@dimen/_10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cameradialogbtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight=".3"
                android:background="@null"
                android:padding="@dimen/_5sdp"
                android:text="@string/take_a_picture_from_camera"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"/>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@color/gray" />


            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gallerydialogbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight=".3"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/choose_from_gallery"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@color/gray" />


            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/canceldialogbtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight=".3"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/no_thanks"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>