<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@color/white"
        app:cardElevation="@dimen/_10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight=".3"
                android:background="@null"
                android:gravity="center"
                android:padding="@dimen/_10dp"
                android:text="@string/you_want_to_crop_this_image"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"/>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@color/gray" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_320sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight=".3"
                android:scaleType="fitXY"
                android:textSize="@dimen/_16ssp">

            </androidx.appcompat.widget.AppCompatImageView>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@color/gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUseOrignal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight=".3"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/use_orignal"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCrop"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_weight=".3"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/crop"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"/>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>