<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_20sdp"
            android:background="@color/colorPrimary"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/add_more_fault_button" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_view"
            android:padding="10dp"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="left"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_20sdp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="AC" />


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_triangle" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_view"
            android:padding="10dp"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="left"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_20sdp"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="Repair" />


            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_triangle" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_view"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="left"
                    android:textSize="@dimen/_20sdp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/split_ac_repair" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@color/green"
                    android:textSize="@dimen/_20sdp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:text="Add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="left"
                    android:textSize="@dimen/_20sdp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:text="@string/window_ac_repair" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@color/green"
                    android:textSize="@dimen/_20sdp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:text="Add" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>