<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Message" />

            <TextView
                android:id="@+id/tvUpdateContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:padding="10dp"
                android:gravity="left"
                android:textSize="12sp"
                android:text="Please enter customer OTP" />

            <EditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_view"
                android:gravity="top"
                android:hint="ENTER Reason"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:padding="10dp"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSetVisitTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10dp"
                    android:background="@color/graylight"
                    android:text="Set Visit Time"/>

                <TextView
                    android:id="@+id/tvSetVisitDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@color/graylight"
                    android:text="Set Visit Date"/>



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swtHome"
                    android:layout_width="wrap_content"
                    android:text="@string/COD"
                    app:switchPadding="@dimen/_5sdp"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swtOffice"
                    android:layout_width="wrap_content"
                    android:text="@string/Online"
                    app:switchPadding="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10dp"
                android:weightSum="2"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="@dimen/_10dp">

                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/submit"
                    android:id="@+id/tvYesCancel"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>